@@ -1539,8 +1539,9 @@ ALTER TABLE `pma_column_comments`
         which are in Unicode, just to avoid losing some characters).<br /><br />
 
         Setting this to <tt>TRUE</tt> also activates a pull-down menu
-	in the Export page, to choose the character set when exporting a file.
-	The default value in this menu comes from <tt>$cfg['Export']['charset']</tt>.
+        in the Export and Import pages, to choose the character set when 
+        exporting a file. The default value in this menu comes from 
+        <tt>$cfg['Export']['charset']</tt> and <tt>$cfg['Import']['charset']</tt>.
     </dd>
 
     <dt id="cfg_RecodingEngine">$cfg['RecodingEngine'] string</dt>
