@@ -8,6 +8,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 3.2.0.0 (not yet released)
 - [core] better support for vendor customisation (based on what Debian needs)
 - rfe #2127987 warn when session.gc_maxlifetime is less than cookie validity
+- rfe #2100910 configurable default charset for import
 
 3.1.1.0 (not yet released)
 - patch #2242765 [core] Navi panel server links wrong,
